# flogger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  script.sh  typescript
blog/: admin.py  blog_service.py  constants.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug_alter_tag_slug.py  0003_alter_blog_title.py  0004_alter_blog_slug_alter_blog_title.py
blog/templates/: base.html  blog-editor.html  homepage.html
blog/templates/blogs/: blog-editor.html  blog.html  homepage.html
blog/templates/blogs/partial/: ai_error.html  ai_polling.html  ai_result.html  blog-form.html  blogs.html  tags-modal.html
blog/templates/partial/: blog-form.html  blogs.html  navbar.html
blog/templatetags/: markdown_extras.py
flogger/: asgi.py  settings.py  urls.py  wsgi.py
task/: models.py  service.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_rename_blog_id_blogconversiontask_blog_and_more.py
templates/: base.html  navbar.html
templates/errors/: 404.html  500.html
user_profile/: constants.py  forms.py  middleware.py  models.py  serializers.py  urls.py  user_service.py  views.py
user_profile/migrations/: 0001_initial.py
user_profile/templates/: about.html
user_profile/templates/user_profile/: about.html  auth-form.html  profile.html
user_profile/templates/user_profile/partials/: login.html  register.html
utils/: __init__.py  auth_util.py  response.py  util.py
