[tool.poetry]
name = "blog-flog"
version = "0.1.0"
description = "A platform for blog."
authors = [
    "Abhishek Mishra <abhiimiishra@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "6.0"
python-dotenv = "1.2"
psycopg = {extras = ["binary"], version = "^3.3.2"}
djangorestframework = "^3.16.1"
python-jose = "^3.5.0"
djangorestframework-simplejwt = "^5.5.1"
django-markdownify = "^0.9.6"
sentry-sdk = "^2.52.0"
django_htmx = "^1.26.0"
google-genai = "^1.70.0"
uvicorn = "^0.44.0"
gunicorn = "^25.3.0"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
